# Discord-chan

./: .dockerignore  .envrc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  _typos.toml  config_example.py  core.py  docker-compose.yml  flake.nix  hashmap.json  justfile  pyproject.toml  requirements.txt  requirments.txt  restart.py  settings_example.json  setup.py  setup.sql
.github/: renovate.json
.github/workflows/: build.yml  flake_check.yml  pythonapp.yml  pythonpackage.yml
cogs/: connect4.py  events.py  games.py  general.py  help.py  info.py  jay.py  jsk.py  logger.py  mod.py  nubby.py  owner.py  patches.py  sniping.py  voice_commands.py  wallemojis.py
discord_chan/: __init__.py  __main__.py  bot.py  checks.py  constants.py  context.py  converters.py  database.py  datastore.py  db.py  errors.py  features.py  games.py  help.py  image.py  image_processing.py  jlank.py  menus.py  monitor.py  object_storage.py  paginators.py  query_builder.py  safebooru_api.py  snipe.py  typing.py  typing_helpers.py  utils.py
discord_chan/data/: default.sql  default_config.txt  interactive_config.txt
discord_chan/emote_manager/: __init__.py  emote_manager.py
discord_chan/emote_manager/utils/: __init__.py  archive.py  converter.py  emote.py  errors.py  image.py  misc.py  paginator.py
discord_chan/extensions/: __init__.py  accessibility.py  anime.py  cope.py  error_handler.py  gambling.py  gamer_words.py  games.py  garbage.py  general.py  glorpies.py  images.py  meta.py  minecraft.py  mod.py  owner.py  snipe.py  todo.py  typing_watch.py  word_track.py
discord_chan/extensions/commands/: __init__.py  accessibility.py  anime.py  games.py  general.py  images.py  jishaku.py  meta.py  mod.py  music.py  nsfw.py  owner.py  ratings.py  snipe.py  stats.py
discord_chan/extensions/internals/: __init__.py  error_handler.py  events.py  logging.py
discord_chan/extensions/special/: __init__.py  grubninja.py  wizwalker.py
discord_chan/rpg/: entity.py
extras/: checks.py  fuzzy.py  paginator.py  utils.py
extras/helps/: starrhelp.py
logic/: games.py  image_processing.py
modules/: advanced.py  discord_chan.nix  dpy.py  events.py  general.py  help.py  info.py  jsk.py  logger.py  mod.py  music.py  owner.py  snipe.py  sniping.py  yes.py
nix/: discord_chan.nix
tests/: test_database.py
