[tool.poetry]
name = "discord_chan"
version = "2.27.2"
description = "General purpose Discord bot"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.2.6"
uwuify = "^1.3.1"
click = "^8.2.1"
loguru = "^0.7.3"
humanize = "^4.12.3"
psutil = "^7.0.0"
uvloop = {version = "0.21.0", markers = "platform_system == 'Linux'"}
Unidecode = "^1.4.0"
"discord.py" = "^2.5.2"
jishaku = "^2.6.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
pendulum = "^3.1.0"
parsedatetime = "^2.6"
typing-extensions = "^4.13.2"
loguru-logging-intercept = "^0.1.5"
audioop-lts = {version = "^0.2.1", python = "^3.13"}
aexaroton = "^0.1.1"
asyncpg = "^0.30.0"

[tool.poetry.scripts]
discord_chan = "discord_chan.__main__:main"

[tool.poetry.group.images.dependencies]
wand = "^0.6.13"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
