[project]
name = "discord_chan"
version = "2.28.1"
description = "General purpose Discord bot"
authors = [
    {name="StarrFox", email="starrfox6312@gmail.com"}
]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "aexaroton>=0.1.2",
    "asyncpg>=0.30.0",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "click>=8.3.0",
    "discord-ext-menus",
    "discord-py>=2.6.4",
    "humanize>=4.13.0",
    "jishaku>=2.6.1",
    "loguru-logging-intercept>=0.1.5",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "parsedatetime>=2.6",
    "pendulum>=3.1.0",
    "psutil>=7.1.0",
    "typing-extensions>=4.15.0",
    "unidecode>=1.4.0",
    "uvloop>=0.21.0; sys_platform == 'linux'",
    "uwuify>=1.3.1",
]

[tool.uv]
default-groups = "all"

[dependency-groups]
images = [
    "pillow>=12.0.0",
    "wand>=0.6.13",
]
typing = [
    "asyncpg-stubs>=0.30.2",
]

[project.scripts]
discord_chan = "discord_chan.__main__:main"

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }

[build-system]
requires = ["uv_build>=0.7.22"]
build-backend = "uv_build"
